objects/SFDocumentor__Field_Collection__c.object
<CustomObject>
    <description>Collection Of all fields in all object of org</description>
    <fields>
        <fullName>SFDocumentor__Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Field_Collections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__CreatedDate__c</fullName>
        <label>Field Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Created_by_Name__c</fullName>
        <label>Created by Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__CustomfieldID__c</fullName>
        <externalId>true</externalId>
        <label>Customfield ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Data_Type__c</fullName>
        <label>Data Type</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Datatyp__c</fullName>
        <description>This field is used to count Lookup and master detail relationship</description>
        <label>Datatyp</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__DeveloperName__c</fullName>
        <label>Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__DurableId__c</fullName>
        <externalId>true</externalId>
        <label>DurableId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__EntityDefinitionId__c</fullName>
        <label>EntityDefinitionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Field_API_Name__c</fullName>
        <externalId>true</externalId>
        <label>Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Field_Id__c</fullName>
        <label>Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Field_Length__c</fullName>
        <label>Field Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Field_Type__c</fullName>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDocumentor__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__LastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Field_Collections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__LastModifiedDate__c</fullName>
        <label>Field Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Last_Sync_Date__c</fullName>
        <description>This will store date and  time when last time batch was run</description>
        <label>Last SFDoc Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Link_URL__c</fullName>
        <formula>HYPERLINK(SFDocumentor__Link__c , Name,&apos;_Blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Setup Link/URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Max__c</fullName>
        <label>Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Object_Name__c</fullName>
        <label>Object Name</label>
        <referenceTo>SFDocumentor__Object_Collection__c</referenceTo>
        <relationshipLabel>Field Collections</relationshipLabel>
        <relationshipName>Field_Collections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>SFDocumentor__Object_Type__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Percentage_Used__c</fullName>
        <formula>IF( SFDocumentor__Used__c &gt; 0 , (SFDocumentor__Used__c/SFDocumentor__Max__c), 0)</formula>
        <label>Percentage Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Publisher_ID__c</fullName>
        <label>Publisher ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Recent_Created_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recent Record Inserted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Field_Collections2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Recent_Record_Inserted_On__c</fullName>
        <description>This field will indicate when record was inserted last time.</description>
        <label>Recent Record Inserted On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Recent_Record_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recent Record Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Field_Collections3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Recent_Record_Updated_On__c</fullName>
        <description>This field will show when record was updated last time.</description>
        <label>Recent Record Updated On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Record_Link__c</fullName>
        <description>This URL will store link for updated record .</description>
        <label>Record Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__SFDocUniqueId__c</fullName>
        <externalId>true</externalId>
        <label>SFDocUniqueId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__SFDocumentorDesc__c</fullName>
        <label>SFDoc Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Status_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field will store name of user who have changed status field.</description>
        <label>Status Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Field_Collections4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Used</fullName>
                </value>
                <value>
                    <fullName>Unused</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t determine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDocumentor__Total_Records__c</fullName>
        <label>Total Records</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Used__c</fullName>
        <label>Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Value_Type_ID__c</fullName>
        <label>Value Type ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__XXXX_del__c</fullName>
        <label>XXXX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Field Collection</label>
    <listViews>
        <fullName>SFDocumentor__All</fullName>
        <columns>NAME</columns>
        <columns>SFDocumentor__Field_API_Name__c</columns>
        <columns>SFDocumentor__Total_Records__c</columns>
        <columns>SFDocumentor__Percentage_Used__c</columns>
        <columns>SFDocumentor__SFDocumentorDesc__c</columns>
        <columns>SFDocumentor__Field_Type__c</columns>
        <columns>SFDocumentor__Data_Type__c</columns>
        <columns>SFDocumentor__Status__c</columns>
        <columns>SFDocumentor__Object_Name__c</columns>
        <columns>SFDocumentor__Link_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SFDocumentor__Status_Can_t_Determine</fullName>
        <columns>NAME</columns>
        <columns>SFDocumentor__Field_API_Name__c</columns>
        <columns>SFDocumentor__Data_Type__c</columns>
        <columns>SFDocumentor__Description__c</columns>
        <columns>SFDocumentor__Total_Records__c</columns>
        <columns>SFDocumentor__Link__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>SFDocumentor__Status__c</field>
            <operation>equals</operation>
            <value>Can&apos;t determine</value>
        </filters>
        <label>Status Can&apos;t Determine</label>
    </listViews>
    <listViews>
        <fullName>SFDocumentor__Unused_Field</fullName>
        <columns>NAME</columns>
        <columns>SFDocumentor__Field_API_Name__c</columns>
        <columns>SFDocumentor__Status__c</columns>
        <columns>SFDocumentor__Data_Type__c</columns>
        <columns>SFDocumentor__Description__c</columns>
        <columns>SFDocumentor__Total_Records__c</columns>
        <columns>SFDocumentor__Link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFDocumentor__Status__c</field>
            <operation>equals</operation>
            <value>Unused</value>
        </filters>
        <label>Unused Field</label>
    </listViews>
    <listViews>
        <fullName>SFDocumentor__Used_Field</fullName>
        <columns>NAME</columns>
        <columns>SFDocumentor__Field_API_Name__c</columns>
        <columns>SFDocumentor__Status__c</columns>
        <columns>SFDocumentor__Data_Type__c</columns>
        <columns>SFDocumentor__Description__c</columns>
        <columns>SFDocumentor__Total_Records__c</columns>
        <columns>SFDocumentor__Link__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>SFDocumentor__Status__c</field>
            <operation>equals</operation>
            <value>Used</value>
        </filters>
        <label>Used Field</label>
    </listViews>
    <nameField>
        <label>Field Collection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Collections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>